# reinhardt-web

./: .coderabbit.yaml  .gitignore  .semgrepignore  .testcontainers.properties  .tfprovidercheck.yml  AGENTS.md  CHANGELOG.md  CLAUDE.commit.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  LICENSE.md  Makefile.toml  README.ja.md  README.md  RELEASE_PR_ANALYSIS.md  SECURITY.md  SUBTREE_OPERATIONS.md  build.rs  codecov.yml  debug_registry.rs  deny.toml  llms.txt  release-plz.toml  rust-toolchain.toml  rustfmt.toml
benchmarks/: Cargo.toml  README.md  suite.toml
benchmarks/admin/create_form/: benchmark.toml
benchmarks/admin/detail_view/: benchmark.toml
benchmarks/admin/list_view_100k/: benchmark.toml
benchmarks/admin/list_view_1k/: benchmark.toml
benchmarks/admin/search_filter/: benchmark.toml
benchmarks/benches/: runtime_http.rs
benchmarks/compile_time/cargo_check/: benchmark.toml
benchmarks/compile_time/clean_build_full/: benchmark.toml
benchmarks/compile_time/clean_build_minimal/: benchmark.toml
benchmarks/compile_time/incremental_model_change/: benchmark.toml
benchmarks/compile_time/incremental_route_change/: benchmark.toml
benchmarks/contract/dry_run_deploy/: benchmark.toml
benchmarks/contract/generate_cloud_plan/: benchmark.toml
benchmarks/contract/introspect_medium_app/: benchmark.toml
benchmarks/contract/introspect_small_app/: benchmark.toml
benchmarks/frontend/: README.md  package-lock.json  package.json  suite.toml  tsconfig.json
benchmarks/frontend/runner/: bundles.ts  (+10 more)
benchmarks/results/: 2026-06-26-framework-comparison.md
benchmarks/src/: main.rs
benchmarks/suite/: Cargo.toml
crates/reinhardt-admin/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.ja.md  README.md  build.rs
crates/reinhardt-admin-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-apps/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  build.rs
crates/reinhardt-auth/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/reinhardt-cms/: CHANGELOG.md  Cargo.toml
crates/reinhardt-commands/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-conf/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-contrib/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-core/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  build.rs
crates/reinhardt-db/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-db-macros/: CHANGELOG.md  Cargo.toml
crates/reinhardt-debug-toolbar/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-deeplink/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-dentdelion/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-deploy/: CHANGELOG.md  Cargo.toml
crates/reinhardt-desktop/: Cargo.toml  README.md
crates/reinhardt-di/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-dispatch/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-event-catalog/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-formatter/: CHANGELOG.md  Cargo.toml
crates/reinhardt-forms/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-graphql/: CHANGELOG.md  Cargo.toml  GRPC_INTEGRATION.md  README.md
crates/reinhardt-grpc/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  build.rs
crates/reinhardt-http/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-i18n/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-mail/: CHANGELOG.md  Cargo.toml  README.md
examples/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.json  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  Makefile.toml  README.md  SUBTREE_OPERATIONS.md  docker-compose.yml
examples/.cargo/: config.local.toml  config.toml
examples/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
examples/common/: Cargo.toml
examples/database-integration/: Cargo.toml  README.md  build.rs  docker-compose.override.yml
examples/examples-database-integration/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.api-tests.yml  docker-compose.yml
examples/examples-di-showcase/: Cargo.toml  Makefile.toml
examples/examples-github-issues/: Cargo.toml  Dockerfile  Makefile.toml  README.md  bacon.toml  docker-compose.api-tests.yml  docker-compose.yml
examples/examples-hello-world/: .gitignore  Cargo.toml  Makefile.toml  README.md
examples/examples-multi-auth/: Cargo.toml
examples/examples-rest-api/: Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  docker-compose.api-tests.yml
examples/examples-rough2spec/: Cargo.toml  README.md
examples/examples-todo/: Cargo.toml  README.md  build.rs  index.html
examples/examples-tutorial-basis/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  index.html
examples/examples-tutorial-rest/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bruno  Makefile.toml  README.md  build.rs  docker-compose.api-tests.yml
examples/examples-twitter/: Cargo.toml  Makefile.toml  README.md  bacon.toml  build.rs  docker-compose.yml  quickstart.sh
examples/examples-viewset-advanced/: Cargo.toml  README.md
examples/hello-world/: Cargo.toml
examples/local/: Cargo.toml
examples/remote/: Cargo.toml  README.md
examples/rest-api/: Cargo.toml  README.md
examples/scripts/: test-all.sh
tests/: Cargo.toml  README.ja.md  README.md  build.rs  pages_i18n_facade.rs  pages_style_facade.rs
tests/bench/: Cargo.toml  README.md  graphql_performance.rs  template_compile_time_vs_runtime.rs
tests/grpc_services/: user_events_service.rs  user_service.rs
tests/integration/: Cargo.toml  README.md  admin_integration_tests.rs  askama.toml  build.rs  cache_pubsub_integration.rs  shortcuts_orm_integration.rs  tasks_locking_redis_integration.rs  tasks_rabbitmq_backend_integration.rs  tasks_redis_backend_integration.rs  test_schema_derive_dependencies.rs  tests.rs  viewset_router_tests.rs  whitenoise_integration_tests.rs
tests/proto/: user.proto  user_events.proto
tests/src/: lib.rs
(+8235 files in other folders)
