[package]
name = "reinhardt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A full-stack API framework for Rust, inspired by Django and Django REST Framework"
repository.workspace = true
authors.workspace = true

[features]
default = ["standard"]

# Minimal feature set - for microservices and simple APIs
minimal = []

# Standard feature set - balanced for most projects
standard = [
  "minimal",
  "reinhardt-db",
  "reinhardt-db/orm",
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-middleware",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
  "core",
  "reinhardt-core/signals",
  "reinhardt-rest/parsers",
  "reinhardt-template",
  "reinhardt-template/renderers",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
]

# Individual feature flags for fine-grained control
database = [
  "reinhardt-db",
  "reinhardt-db/orm",
  "reinhardt-db/migrations",
  "reinhardt-db/contenttypes",
]
api = ["reinhardt-rest", "reinhardt-rest/serializers", "reinhardt-views/viewsets"]
auth = ["reinhardt-auth"]
admin = ["reinhardt-admin", "reinhardt-admin/panel", "reinhardt-forms", "reinhardt-template"]
admin-panel = ["reinhardt-admin/panel"]
forms = ["reinhardt-forms"]
graphql = ["reinhardt-graphql"]
templates = ["reinhardt-template"]
websockets = ["reinhardt-websockets"]
cache = ["reinhardt-utils/cache"]
redis-backend = ["cache"]
i18n = ["reinhardt-i18n"]
mail = ["reinhardt-mail"]
sessions = ["reinhardt-auth"]
middleware = ["sessions"]
static-files = ["reinhardt-utils/static"]
storage = ["reinhardt-utils/storage"]
shortcuts = ["reinhardt-shortcuts"]
tasks = ["reinhardt-tasks"]
server = ["reinhardt-server"]

# Parent crate features (new module structure)
conf = ["reinhardt-conf"]
core = ["reinhardt-core", "reinhardt-apps"]
rest = ["reinhardt-rest"]
messages = ["reinhardt-core/messages"]
di = ["reinhardt-core/di"]
test = ["reinhardt-test"]

# Meta features
full = [
  "standard",
  "database",
  "auth",
  "admin",
  "graphql",
  "websockets",
  "cache",
  "i18n",
  "mail",
  "sessions",
  "static-files",
  "storage",
]

# API-only preset - REST without templates/forms
api-only = [
  "minimal",
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-rest/parsers",
  "reinhardt-template",
  "reinhardt-template/renderers",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
]

# GraphQL-focused preset
graphql-server = [
  "minimal",
  "reinhardt-auth",
  "graphql",
  "database",
]

# WebSocket-centric preset
websocket-server = [
  "minimal",
  "reinhardt-auth",
  "websockets",
  "reinhardt-utils/cache",
]

# CLI/Background jobs preset
cli-tools = [
  "database",
  "reinhardt-db",
  "reinhardt-db/migrations",
  "reinhardt-tasks",
  "mail",
]

# Testing utilities preset
test-utils = [
  "reinhardt-test",
  "database",
]

# Fine-grained authentication
auth-jwt = ["auth", "reinhardt-auth/jwt"]
auth-session = ["auth", "reinhardt-auth/session", "sessions"]
auth-oauth = ["auth", "reinhardt-auth/oauth"]
auth-token = ["auth", "reinhardt-auth/token"]

# Fine-grained database support
db-postgres = ["database", "reinhardt-db/postgres"]
db-mysql = ["database", "reinhardt-db/mysql"]
db-sqlite = ["database", "reinhardt-db/sqlite"]
db-mongodb = ["database", "reinhardt-db/mongodb-backend"]
db-cockroachdb = ["database", "reinhardt-db/cockroachdb-backend"]

# Fine-grained serialization
serialize-json = ["reinhardt-rest", "reinhardt-rest/serializers"]
serialize-xml = ["reinhardt-rest", "reinhardt-rest/serializers"]
serialize-yaml = ["reinhardt-rest", "reinhardt-rest/serializers"]

# Fine-grained middleware
middleware-cors = ["reinhardt-middleware", "reinhardt-middleware/cors"]
middleware-compression = ["reinhardt-middleware", "reinhardt-middleware/compression"]
middleware-security = ["reinhardt-middleware", "reinhardt-middleware/security"]
middleware-rate-limit = ["reinhardt-middleware", "reinhardt-middleware/rate-limit"]

[dependencies]
# Core dependencies (always included)
reinhardt-urls = { workspace = true }
reinhardt-utils = { workspace = true }
reinhardt-views = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }

# Parent crate dependencies (new module structure)
# These parent crates expose their subcrates via features
reinhardt-apps = { workspace = true, optional = true }
reinhardt-conf = { workspace = true, optional = true }
reinhardt-core = { workspace = true, optional = true }
reinhardt-db = { workspace = true, optional = true }
reinhardt-template = { workspace = true, optional = true }
reinhardt-test = { workspace = true, optional = true }
reinhardt-rest = { workspace = true, optional = true }
reinhardt-auth = { workspace = true, optional = true }

# Additional optional dependencies
reinhardt-admin = { workspace = true, optional = true }
reinhardt-forms = { workspace = true, optional = true }
reinhardt-middleware = { workspace = true, optional = true }
reinhardt-shortcuts = { workspace = true, optional = true }
reinhardt-tasks = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
reinhardt-i18n = { workspace = true, optional = true }
reinhardt-mail = { workspace = true, optional = true }
reinhardt-graphql = { workspace = true, optional = true }
reinhardt-websockets = { workspace = true, optional = true }

# Re-export commonly used dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.8"

[build-dependencies]
tonic-prost-build = { workspace = true }

[workspace]
resolver = "3"
members = [
  # Core framework (always included)
  "crates/reinhardt-micro",
  "crates/reinhardt-apps",
  "crates/reinhardt-conf",
  "crates/reinhardt-core",
  "crates/reinhardt-di",
  "crates/reinhardt-http",
  "crates/reinhardt-server",
  "crates/reinhardt-views",
  "crates/reinhardt-urls",
  "crates/reinhardt-middleware",
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-rest",
  "crates/reinhardt-auth",
  "crates/reinhardt-admin", # Admin panel functionality
  "crates/reinhardt-admin-cli", # Admin CLI tool
  "crates/reinhardt-grpc",
  "crates/reinhardt-commands",
  "crates/reinhardt-db",
  "crates/reinhardt-dispatch",
  "crates/reinhardt-shortcuts",
  "crates/reinhardt-forms",
  "crates/reinhardt-template",
  "crates/reinhardt-i18n",
  "crates/reinhardt-mail",
  "crates/reinhardt-graphql",
  "crates/reinhardt-websockets",
  # Integration tests
  "tests/integration",
]

exclude = []

default-members = [
  "crates/reinhardt-views",
  "crates/reinhardt-middleware",
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-rest",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent8192/reinhardt-rs"
authors = ["kent8192 <51869472+kent8192@users.noreply.github.com>"]

[workspace.metadata.workspaces]
# cargo-workspaces configuration
allow-branch = "main"           # Only allow publishing from main branch
allow-dirty = false             # Require clean working directory
no-individual-tags = false      # Enable cargo-ws automatic tag generation

[workspace.dependencies]
# Internal crates
reinhardt-micro = { path = "crates/reinhardt-micro", version = "0.1.0-alpha.1" }
reinhardt-apps = { path = "crates/reinhardt-apps", version = "0.1.0-alpha.1" }
reinhardt-conf = { path = "crates/reinhardt-conf", version = "0.1.0-alpha.1" }
reinhardt-settings = { path = "crates/reinhardt-conf/crates/settings", version = "0.1.0-alpha.1" }
reinhardt-core = { path = "crates/reinhardt-core", version = "0.1.0-alpha.1" }
reinhardt-di = { path = "crates/reinhardt-di", version = "0.1.0-alpha.1" }
reinhardt-http = { path = "crates/reinhardt-http", version = "0.1.0-alpha.1" }
reinhardt-server = { path = "crates/reinhardt-server", version = "0.1.0-alpha.1" }
reinhardt-views = { path = "crates/reinhardt-views", version = "0.1.0-alpha.1" }
reinhardt-urls = { path = "crates/reinhardt-urls", version = "0.1.0-alpha.1" }
reinhardt-routers = { path = "crates/reinhardt-urls/crates/routers", version = "0.1.0-alpha.1" }
reinhardt-middleware = { path = "crates/reinhardt-middleware", version = "0.1.0-alpha.1" }
reinhardt-template = { path = "crates/reinhardt-template", version = "0.1.0-alpha.1" }
reinhardt-forms = { path = "crates/reinhardt-forms", version = "0.1.0-alpha.1" }
reinhardt-test = { path = "crates/reinhardt-test", version = "0.1.0-alpha.1" }
reinhardt-tasks = { path = "crates/reinhardt-tasks", version = "0.1.0-alpha.1" }
reinhardt-utils = { path = "crates/reinhardt-utils", version = "0.1.0-alpha.1" }
reinhardt-rest = { path = "crates/reinhardt-rest", version = "0.1.0-alpha.1" }
reinhardt-auth = { path = "crates/reinhardt-auth", version = "0.1.0-alpha.1" }
reinhardt-admin = { path = "crates/reinhardt-admin", version = "0.1.0-alpha.1" }
reinhardt-panel = { path = "crates/reinhardt-admin/crates/panel", version = "0.1.0-alpha.1" }
reinhardt-admin-cli = { path = "crates/reinhardt-admin-cli", version = "0.1.0-alpha.1" }
reinhardt-grpc = { path = "crates/reinhardt-grpc", version = "0.1.0-alpha.1" }
reinhardt-graphql-macros = { path = "crates/reinhardt-graphql/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-graphql-core = { path = "crates/reinhardt-graphql/crates/core", version = "0.1.0-alpha.1" }
reinhardt-commands = { path = "crates/reinhardt-commands", version = "0.1.0-alpha.1" }
reinhardt-db = { path = "crates/reinhardt-db", version = "0.1.0-alpha.1" }
reinhardt-postgres = { path = "crates/reinhardt-postgres", version = "0.1.0-alpha.1" }
reinhardt-events = { path = "crates/reinhardt-events", version = "0.1.0-alpha.1" }
reinhardt-shortcuts = { path = "crates/reinhardt-shortcuts", version = "0.1.0-alpha.1" }
reinhardt-dispatch = { path = "crates/reinhardt-dispatch", version = "0.1.0-alpha.1" }
reinhardt-i18n = { path = "crates/reinhardt-i18n", version = "0.1.0-alpha.1" }
reinhardt-mail = { path = "crates/reinhardt-mail", version = "0.1.0-alpha.1" }
reinhardt-graphql = { path = "crates/reinhardt-graphql", version = "0.1.0-alpha.1" }
reinhardt-websockets = { path = "crates/reinhardt-websockets", version = "0.1.0-alpha.1" }

# Contrib subcrates
reinhardt-messages = { path = "crates/reinhardt-core/crates/messages", version = "0.1.0-alpha.1" }
reinhardt-contenttypes = { path = "crates/reinhardt-db/crates/contenttypes", version = "0.1.0-alpha.1" }
reinhardt-sessions = { path = "crates/reinhardt-auth/crates/sessions", version = "0.1.0-alpha.1" }
reinhardt-static = { path = "crates/reinhardt-utils/crates/static", version = "0.1.0-alpha.1" }

# REST subcrates
reinhardt-negotiation = { path = "crates/reinhardt-core/crates/negotiation", version = "0.1.0-alpha.1" }
reinhardt-pagination = { path = "crates/reinhardt-core/crates/pagination", version = "0.1.0-alpha.1" }
reinhardt-parsers = { path = "crates/reinhardt-core/crates/parsers", version = "0.1.0-alpha.1" }
reinhardt-serializers = { path = "crates/reinhardt-rest/crates/serializers", version = "0.1.0-alpha.1" }
reinhardt-browsable-api = { path = "crates/reinhardt-rest/crates/browsable-api", version = "0.1.0-alpha.1" }
reinhardt-openapi = { path = "crates/reinhardt-rest/crates/openapi", version = "0.1.0-alpha.1" }
reinhardt-openapi-macros = { path = "crates/reinhardt-rest/crates/openapi-macros", version = "0.1.0-alpha.1" }

# URL subcrates
reinhardt-proxy = { path = "crates/reinhardt-urls/crates/proxy", version = "0.1.0-alpha.1" }

# Web framework
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http = "1.3.1"
http-body-util = "0.1.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "postgres",
  "mysql",
  "any",
  "macros",
  "migrate",
] }

# Authentication & Security
argon2 = { version = "0.6.0-rc.1", features = ["std"] }
rand = "0.10.0-rc.0"
rand_core = "0.9"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Routing
regex = "1.12.2"
nom = "8.0.0"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
bytes = "1.10.1"
once_cell = "1.21.3"
tracing = "0.1.41"
parking_lot = "0.12"
base64 = "0.22"

# Template engine & syntax highlighting
tera = { version = "1.20" }
syntect = "5.2"

# Cryptography & Security
aes-gcm = "0.11.0-rc.1"
sha2 = "0.10.9"
hmac = "0.12"

# Image Processing
image = "0.25.8"

# Compression
flate2 = "1.1.5"
brotli = "8.0.2"

# Phone Number Validation
phonenumber = "0.3.7"

# Serialization formats
rmp-serde = "1.3.0"
prost = "0.14.1"
prost-build = "0.14.1"

# gRPC
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Redis (for sessions)
# Temporarily downgraded to 0.32 due to deadpool-redis compatibility
# TODO: Upgrade to redis 1.0 when deadpool-redis supports it
redis = { version = "0.32", features = [
  "tokio-comp",
  "connection-manager",
] }

# Connection pooling & migrations
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
sea-query = { version = "1.0.0-rc.1", features = ["with-json", "with-chrono", "postgres-array"] }
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Testing
testcontainers = { version = "0.25.2", features = ["blocking"] }
testcontainers-modules = { version = "0.13.0", features = [
  "postgres",
  "mysql",
  "redis",
] }
proptest = "1.8.0"
tokio-test = "0.4.4"
serial_test = "3.2.0"
rstest = "0.26.1"
mockall = "0.13.1"
scopeguard = "1.2.0"
tempfile = "3.15.0"

# Note: num-bigint-dig v0.8.x has a future incompatibility warning
# (private vec macro issue, see https://github.com/rust-lang/rust/issues/120192)
# This is fixed in v0.9.0+, but we currently use v0.8.6 via the following dependency chain:
# sqlx -> sqlx-mysql -> rsa v0.9.x -> num-bigint-dig v0.8.6
#
# The warning does not affect current builds and will be resolved when:
# - rsa upgrades to num-bigint-dig v0.9.0+ (tracked in rsa repository)
# - OR sqlx upgrades to a version of rsa that uses num-bigint-dig v0.9.0+
#
# This is a transitive dependency issue that will be resolved upstream.
# No action needed on our side unless the warning becomes an error in future Rust versions.
