[package]
name = "reinhardt-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A full-stack API framework for Rust, inspired by Django and Django REST Framework"
repository.workspace = true
authors.workspace = true

[lib]
name = "reinhardt"

[features]
default = ["full"]

# Minimal feature set - for microservices and simple APIs
# Equivalent to reinhardt-micro functionality (routing, DI, params, server, core)
minimal = [
  "core",   # Core types, macros, HTTP
  "di",     # Dependency injection
  "server", # HTTP server
]

# Standard feature set - balanced for most projects
standard = [
  "minimal",
  "database",                      # Includes ORM, migrations, contenttypes
  "db-postgres",                   # Default database backend
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-middleware",
  "reinhardt-middleware/sessions",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
  "core",
  "reinhardt-core/signals",
  "reinhardt-rest/parsers",
  "reinhardt-pages",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
]

# Individual feature flags for fine-grained control
database = [
  "reinhardt-db",
  "reinhardt-db/orm",
  "reinhardt-db/migrations",
  "reinhardt-db/contenttypes",
  "linkme",
]
api = [
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
]
auth = ["reinhardt-auth"]
admin = [
  "reinhardt-admin",
  "reinhardt-forms",
  "reinhardt-pages",
]
forms = ["reinhardt-forms"]
graphql = ["reinhardt-graphql"]
pages = ["reinhardt-pages"]
templates = ["reinhardt-pages"]
websockets = ["reinhardt-websockets"]
cache = ["reinhardt-utils/cache"]
redis-backend = ["cache"]
i18n = ["reinhardt-i18n"]
mail = ["reinhardt-mail"]
sessions = ["reinhardt-auth"]
middleware = [
  "reinhardt-middleware",
  "reinhardt-middleware/sessions",
  "sessions",
]
static-files = ["reinhardt-utils/static"]
storage = ["reinhardt-utils/storage"]
shortcuts = ["reinhardt-shortcuts"]
tasks = ["reinhardt-tasks"]
server = ["reinhardt-server"]
commands = ["reinhardt-commands", "reinhardt-commands/migrations"]

# Parent crate features (new module structure)
conf = ["reinhardt-conf"]
core = ["reinhardt-core", "reinhardt-apps", "inventory"]
rest = ["reinhardt-rest"]
messages = ["reinhardt-core/messages"]
# DI feature: Uses reinhardt-core/di which internally enables reinhardt-di/params
# Also directly enables reinhardt-di/params for macro support (extern crate reinhardt_di)
# reinhardt-db/di enables Injectable implementation for DatabaseConnection
di = ["reinhardt-di", "reinhardt-di/params", "reinhardt-core/di", "reinhardt-db?/di"]
test = ["reinhardt-test"]
testcontainers = ["test", "reinhardt-test/testcontainers"]
openapi = ["reinhardt-rest", "reinhardt-rest/openapi"]

# Meta features
full = [
  "standard",
  "conf",
  "database",
  "auth",
  "admin",
  "graphql",
  "websockets",
  "cache",
  "i18n",
  "mail",
  "sessions",
  "static-files",
  "storage",
  "commands",
  "test",
  # Parent crate -full features (recursive full feature activation)
  "reinhardt-db/database-full",
  "reinhardt-core/core-full",
  "reinhardt-rest/rest-full",
  "reinhardt-pages/pages-full",
  "reinhardt-urls/urls-full",
  "reinhardt-views/views-full",
  "reinhardt-auth/auth-full",
  "reinhardt-di/di-full",
  "reinhardt-utils/utils-full",
  "reinhardt-server/server-full",
  # Standalone crates full features
  "reinhardt-apps/full",
  "reinhardt-commands/full",
  "reinhardt-forms/full",
  "reinhardt-http/full",
  "reinhardt-i18n/full",
  "reinhardt-mail/full",
  "reinhardt-shortcuts/full",
  "reinhardt-tasks/full",
  "reinhardt-test/full",
  "reinhardt-websockets/full",
  "reinhardt-middleware/full",
  "reinhardt-graphql/full",
]

# API-only preset - REST without templates/forms
api-only = [
  "minimal",
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-rest/parsers",
  "reinhardt-pages",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
]

# GraphQL-focused preset
graphql-server = ["minimal", "reinhardt-auth", "graphql", "database"]

# WebSocket-centric preset
websocket-server = [
  "minimal",
  "reinhardt-auth",
  "websockets",
  "reinhardt-utils/cache",
]

# CLI/Background jobs preset
cli-tools = [
  "database",
  "reinhardt-db",
  "reinhardt-db/migrations",
  "reinhardt-tasks",
  "mail",
]

# Testing utilities preset
test-utils = ["reinhardt-test", "reinhardt-test/testcontainers", "database"]

# Fine-grained authentication
auth-jwt = ["auth", "reinhardt-auth/jwt"]
auth-session = ["auth", "reinhardt-auth/sessions", "sessions"]
auth-oauth = ["auth", "reinhardt-auth/oauth"]
auth-token = ["auth", "reinhardt-auth/token"]

# Fine-grained database support
db-postgres = ["database", "reinhardt-db/postgres"]
db-mysql = ["database", "reinhardt-db/mysql"]
db-sqlite = ["database", "reinhardt-db/sqlite", "reinhardt-commands/sqlite"]
db-mongodb = ["database", "reinhardt-db/mongodb-backend"]
db-cockroachdb = ["database", "reinhardt-db/cockroachdb-backend"]

# Fine-grained middleware
middleware-cors = ["reinhardt-middleware", "reinhardt-middleware/cors"]
middleware-compression = [
  "reinhardt-middleware",
  "reinhardt-middleware/compression",
]
middleware-security = ["reinhardt-middleware", "reinhardt-middleware/security"]
middleware-rate-limit = [
  "reinhardt-middleware",
  "reinhardt-middleware/rate-limit",
]

[dependencies]
# Core dependencies (always included)
reinhardt-urls = { workspace = true }
reinhardt-utils = { workspace = true }
reinhardt-views = { workspace = true }
reinhardt-http = { workspace = true }
reinhardt-params = { workspace = true }
reinhardt-macros = { workspace = true }
reinhardt-types = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
linkme = { workspace = true, optional = true }

# Parent crate dependencies (new module structure)
# These parent crates expose their subcrates via features
reinhardt-apps = { workspace = true, optional = true }
reinhardt-conf = { workspace = true, optional = true }
reinhardt-core = { workspace = true, optional = true }
reinhardt-db = { workspace = true, optional = true }

# External crates re-exported for macros
inventory = { workspace = true, optional = true }
reinhardt-pages = { workspace = true, optional = true }
reinhardt-test = { workspace = true, optional = true }
reinhardt-rest = { workspace = true, optional = true }
reinhardt-auth = { workspace = true, optional = true }

# Additional optional dependencies
reinhardt-admin = { workspace = true, optional = true }
reinhardt-browsable-api = { workspace = true, optional = true }
reinhardt-commands = { workspace = true, optional = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-forms = { workspace = true, optional = true }
reinhardt-middleware = { workspace = true, optional = true }
reinhardt-shortcuts = { workspace = true, optional = true }
reinhardt-tasks = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
reinhardt-i18n = { workspace = true, optional = true }
reinhardt-mail = { workspace = true, optional = true }
reinhardt-graphql = { workspace = true, optional = true }
reinhardt-websockets = { workspace = true, optional = true }

# Dependencies used directly in this crate
thiserror = { workspace = true }
toml = "0.9.8"

[build-dependencies]
tonic-prost-build = { workspace = true }

[workspace]
resolver = "3"
members = [
  # Core framework (always included)
  "crates/reinhardt-micro",
  "crates/reinhardt-apps",
  "crates/reinhardt-conf",
  "crates/reinhardt-conf/crates/settings",
  "crates/reinhardt-conf/crates/settings-cli",
  "crates/reinhardt-core",
  "crates/reinhardt-core/crates/exception",
  "crates/reinhardt-core/crates/macros",
  "crates/reinhardt-core/crates/messages",
  "crates/reinhardt-core/crates/negotiation",
  "crates/reinhardt-core/crates/pagination",
  "crates/reinhardt-core/crates/parsers",
  "crates/reinhardt-core/crates/security",
  "crates/reinhardt-core/crates/serializers",
  "crates/reinhardt-core/crates/signals",
  "crates/reinhardt-core/crates/types",
  "crates/reinhardt-core/crates/validators",
  "crates/reinhardt-di",
  "crates/reinhardt-di/crates/params",
  "crates/reinhardt-http",
  "crates/reinhardt-server",
  "crates/reinhardt-server/crates/server",
  "crates/reinhardt-views",
  "crates/reinhardt-views/crates/viewsets",
  "crates/reinhardt-urls",
  "crates/reinhardt-urls/crates/proxy",
  "crates/reinhardt-urls/crates/routers",
  "crates/reinhardt-urls/crates/routers-macros",
  "crates/reinhardt-middleware",
  "crates/reinhardt-pages",                             # WASM frontend framework
  "crates/reinhardt-pages/crates/macros",              # WASM frontend macros
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-utils/crates/cache",
  "crates/reinhardt-utils/crates/logging",
  "crates/reinhardt-utils/crates/static",
  "crates/reinhardt-utils/crates/storage",
  "crates/reinhardt-utils/crates/utils-core",
  "crates/reinhardt-rest",
  "crates/reinhardt-rest/crates/browsable-api",
  "crates/reinhardt-rest/crates/filters",
  "crates/reinhardt-rest/crates/metadata",
  "crates/reinhardt-rest/crates/openapi",
  "crates/reinhardt-rest/crates/openapi-macros",
  "crates/reinhardt-rest/crates/serializers",
  "crates/reinhardt-rest/crates/throttling",
  "crates/reinhardt-rest/crates/versioning",
  "crates/reinhardt-auth",
  "crates/reinhardt-auth/crates/sessions",
  "crates/reinhardt-admin",                            # Admin panel functionality
  "crates/reinhardt-admin/crates/types",
  "crates/reinhardt-admin/crates/core",                # Admin panel core logic
  "crates/reinhardt-admin/crates/server",              # Admin panel Server Functions
  "crates/reinhardt-admin/crates/pages",               # Admin panel WASM frontend (new)
  "crates/reinhardt-admin/crates/api",
  "crates/reinhardt-admin/crates/ui",                  # Admin panel WASM UI (legacy)
  "crates/reinhardt-admin-cli",                        # Admin CLI tool
  "crates/reinhardt-grpc",
  "crates/reinhardt-commands",
  "crates/reinhardt-db",
  "crates/reinhardt-db/crates/associations",
  "crates/reinhardt-db/crates/backends",
  "crates/reinhardt-db/crates/backends-pool",
  "crates/reinhardt-db/crates/contenttypes",
  "crates/reinhardt-db/crates/hybrid",
  "crates/reinhardt-db/crates/migrations",
  "crates/reinhardt-db/crates/orm",
  "crates/reinhardt-db/crates/pool",
  "crates/reinhardt-dispatch",
  "crates/reinhardt-shortcuts",
  "crates/reinhardt-forms",
  "crates/reinhardt-i18n",
  "crates/reinhardt-mail",
  "crates/reinhardt-graphql",
  "crates/reinhardt-websockets",
  "crates/reinhardt-dentdelion",                        # Plugin system
  # Integration tests
  "tests",
  "tests/integration",
  # Benchmark tests
  "tests/bench",
]

# Exclude examples as they are independent workspaces
# Each example has a binary named "manage" which would cause
# output filename collisions if built together.
exclude = ["examples"]

default-members = [
  "crates/reinhardt-views",
  "crates/reinhardt-middleware",
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-rest",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent8192/reinhardt-rs"
authors = ["kent8192 <51869472+kent8192@users.noreply.github.com>"]

[workspace.metadata.workspaces]
# cargo-workspaces configuration
allow-branch = "main"      # Only allow publishing from main branch
allow-dirty = false        # Require clean working directory
no-individual-tags = false # Enable cargo-ws automatic tag generation

[workspace.dependencies]
# Main facade crate (for workspace members that need to reference the root crate)
reinhardt = { path = ".", package = "reinhardt-web", version = "0.1.0-alpha.1" }

# Internal crates
reinhardt-micro = { path = "crates/reinhardt-micro", version = "0.1.0-alpha.1" }
reinhardt-apps = { path = "crates/reinhardt-apps", version = "0.1.0-alpha.1" }
reinhardt-conf = { path = "crates/reinhardt-conf", version = "0.1.0-alpha.1" }
reinhardt-settings = { path = "crates/reinhardt-conf/crates/settings", version = "0.1.0-alpha.1" }
reinhardt-settings-cli = { path = "crates/reinhardt-conf/crates/settings-cli", version = "0.1.0-alpha.1" }
reinhardt-core = { path = "crates/reinhardt-core", version = "0.1.0-alpha.1" }
reinhardt-di = { path = "crates/reinhardt-di", version = "0.1.0-alpha.1" }
reinhardt-http = { path = "crates/reinhardt-http", version = "0.1.0-alpha.1" }
reinhardt-server = { path = "crates/reinhardt-server", version = "0.1.0-alpha.1" }
reinhardt-views = { path = "crates/reinhardt-views", version = "0.1.0-alpha.1" }
reinhardt-urls = { path = "crates/reinhardt-urls", version = "0.1.0-alpha.1" }
reinhardt-routers = { path = "crates/reinhardt-urls/crates/routers", version = "0.1.0-alpha.1" }
reinhardt-middleware = { path = "crates/reinhardt-middleware", version = "0.1.0-alpha.1" }
reinhardt-pages = { path = "crates/reinhardt-pages", version = "0.1.0-alpha.1" }
reinhardt-pages-macros = { path = "crates/reinhardt-pages/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-forms = { path = "crates/reinhardt-forms", version = "0.1.0-alpha.1" }
reinhardt-test = { path = "crates/reinhardt-test", version = "0.1.0-alpha.1" }
reinhardt-tasks = { path = "crates/reinhardt-tasks", version = "0.1.0-alpha.1" }
reinhardt-utils = { path = "crates/reinhardt-utils", version = "0.1.0-alpha.1" }
reinhardt-rest = { path = "crates/reinhardt-rest", version = "0.1.0-alpha.1" }
reinhardt-auth = { path = "crates/reinhardt-auth", version = "0.1.0-alpha.1" }
reinhardt-admin = { path = "crates/reinhardt-admin", version = "0.1.0-alpha.1" }
reinhardt-admin-types = { path = "crates/reinhardt-admin/crates/types", version = "0.1.0-alpha.1" }
reinhardt-admin-core = { path = "crates/reinhardt-admin/crates/core", version = "0.1.0-alpha.1" }
reinhardt-admin-server = { path = "crates/reinhardt-admin/crates/server", version = "0.1.0-alpha.1" }
reinhardt-admin-pages = { path = "crates/reinhardt-admin/crates/pages", version = "0.1.0-alpha.1" }
reinhardt-admin-adapters = { path = "crates/reinhardt-admin/crates/adapters", version = "0.1.0-alpha.1" }
reinhardt-admin-cli = { path = "crates/reinhardt-admin-cli", version = "0.1.0-alpha.1" }
reinhardt-grpc = { path = "crates/reinhardt-grpc", version = "0.1.0-alpha.1" }
reinhardt-grpc-macros = { path = "crates/reinhardt-grpc/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-graphql-macros = { path = "crates/reinhardt-graphql/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-commands = { path = "crates/reinhardt-commands", version = "0.1.0-alpha.1" }
reinhardt-db = { path = "crates/reinhardt-db", version = "0.1.0-alpha.1" }
reinhardt-postgres = { path = "crates/reinhardt-postgres", version = "0.1.0-alpha.1" }
reinhardt-events = { path = "crates/reinhardt-events", version = "0.1.0-alpha.1" }
reinhardt-shortcuts = { path = "crates/reinhardt-shortcuts", version = "0.1.0-alpha.1" }
reinhardt-dispatch = { path = "crates/reinhardt-dispatch", version = "0.1.0-alpha.1" }
reinhardt-i18n = { path = "crates/reinhardt-i18n", version = "0.1.0-alpha.1" }
reinhardt-mail = { path = "crates/reinhardt-mail", version = "0.1.0-alpha.1" }
reinhardt-graphql = { path = "crates/reinhardt-graphql", version = "0.1.0-alpha.1" }
reinhardt-websockets = { path = "crates/reinhardt-websockets", version = "0.1.0-alpha.1" }
reinhardt-dentdelion = { path = "crates/reinhardt-dentdelion", version = "0.1.0-alpha.1" }

# Core subcrates
reinhardt-exception = { path = "crates/reinhardt-core/crates/exception", version = "0.1.0-alpha.1" }
reinhardt-macros = { path = "crates/reinhardt-core/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-messages = { path = "crates/reinhardt-core/crates/messages", version = "0.1.0-alpha.1" }
reinhardt-security = { path = "crates/reinhardt-core/crates/security", version = "0.1.0-alpha.1" }
reinhardt-core-serializers = { path = "crates/reinhardt-core/crates/serializers", version = "0.1.0-alpha.1" }
reinhardt-signals = { path = "crates/reinhardt-core/crates/signals", version = "0.1.0-alpha.1" }
reinhardt-types = { path = "crates/reinhardt-core/crates/types", version = "0.1.0-alpha.1" }
reinhardt-validators = { path = "crates/reinhardt-core/crates/validators", version = "0.1.0-alpha.1" }

# Database subcrates
reinhardt-associations = { path = "crates/reinhardt-db/crates/associations", version = "0.1.0-alpha.1" }
reinhardt-backends = { path = "crates/reinhardt-db/crates/backends", version = "0.1.0-alpha.1" }
reinhardt-backends-pool = { path = "crates/reinhardt-db/crates/backends-pool", version = "0.1.0-alpha.1" }
reinhardt-contenttypes = { path = "crates/reinhardt-db/crates/contenttypes", version = "0.1.0-alpha.1" }
reinhardt-hybrid = { path = "crates/reinhardt-db/crates/hybrid", version = "0.1.0-alpha.1" }
reinhardt-migrations = { path = "crates/reinhardt-db/crates/migrations", version = "0.1.0-alpha.1" }
reinhardt-orm = { path = "crates/reinhardt-db/crates/orm", version = "0.1.0-alpha.1" }
reinhardt-pool = { path = "crates/reinhardt-db/crates/pool", version = "0.1.0-alpha.1" }

# DI subcrates
reinhardt-di-macros = { path = "crates/reinhardt-di/crates/macros", version = "0.1.0-alpha.1" }
reinhardt-params = { path = "crates/reinhardt-di/crates/params", version = "0.1.0-alpha.1" }

# Server subcrates
reinhardt-server-core = { path = "crates/reinhardt-server/crates/server", version = "0.1.0-alpha.1" }

# Views subcrates
reinhardt-viewsets = { path = "crates/reinhardt-views/crates/viewsets", version = "0.1.0-alpha.1" }

# Utils subcrates
reinhardt-cache = { path = "crates/reinhardt-utils/crates/cache", version = "0.1.0-alpha.1" }
reinhardt-logging = { path = "crates/reinhardt-utils/crates/logging", version = "0.1.0-alpha.1" }
reinhardt-static = { path = "crates/reinhardt-utils/crates/static", version = "0.1.0-alpha.1" }
reinhardt-storage = { path = "crates/reinhardt-utils/crates/storage", version = "0.1.0-alpha.1" }
reinhardt-utils-core = { path = "crates/reinhardt-utils/crates/utils-core", version = "0.1.0-alpha.1" }

# Auth subcrates
reinhardt-sessions = { path = "crates/reinhardt-auth/crates/sessions", version = "0.1.0-alpha.1" }

# REST subcrates
reinhardt-negotiation = { path = "crates/reinhardt-core/crates/negotiation", version = "0.1.0-alpha.1" }
reinhardt-pagination = { path = "crates/reinhardt-core/crates/pagination", version = "0.1.0-alpha.1" }
reinhardt-parsers = { path = "crates/reinhardt-core/crates/parsers", version = "0.1.0-alpha.1" }
reinhardt-serializers = { path = "crates/reinhardt-rest/crates/serializers", version = "0.1.0-alpha.1" }
reinhardt-browsable-api = { path = "crates/reinhardt-rest/crates/browsable-api", version = "0.1.0-alpha.1" }
reinhardt-openapi = { path = "crates/reinhardt-rest/crates/openapi", version = "0.1.0-alpha.1" }
reinhardt-openapi-macros = { path = "crates/reinhardt-rest/crates/openapi-macros", version = "0.1.0-alpha.1" }

# REST subcrates (continued)
reinhardt-filters = { path = "crates/reinhardt-rest/crates/filters", version = "0.1.0-alpha.1" }
reinhardt-metadata = { path = "crates/reinhardt-rest/crates/metadata", version = "0.1.0-alpha.1" }
reinhardt-throttling = { path = "crates/reinhardt-rest/crates/throttling", version = "0.1.0-alpha.1" }
reinhardt-versioning = { path = "crates/reinhardt-rest/crates/versioning", version = "0.1.0-alpha.1" }
reinhardt-routers-macros = { path = "crates/reinhardt-urls/crates/routers-macros", version = "0.1.0-alpha.1" }

# URL subcrates
reinhardt-proxy = { path = "crates/reinhardt-urls/crates/proxy", version = "0.1.0-alpha.1" }

# Web framework
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http = "1.4.0"
http-body-util = "0.1.3"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_bytes = "0.11"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
csv = "1.3"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "postgres",
  "mysql",
  "any",
  "macros",
  "migrate",
  "rust_decimal",
] }

# Authentication & Security
argon2 = { version = "=0.6.0-rc.4", features = ["std"] }
password-hash = "=0.6.0-rc.4"  # Pinned for argon2 0.6.0-rc.4 compatibility
rand = "0.10.0-rc.0"
rand_core = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }  # WASM support with wasm_js feature (v0.3+)
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Routing
regex = "1.12.2"
nom = "8.0.0"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
inventory = "0.3"
linkme = "0.3"
ctor = "0.6.1"
chrono-tz = "0.10.4"
bytes = "1.10.1"
once_cell = "1.21.3"
tracing = "0.1.41"
parking_lot = "0.12"
base64 = "0.22"

# Template engine & syntax highlighting
tera = { version = "1.20" }
syntect = "5.2"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Cryptography & Security
aes-gcm = "0.11.0-rc.1"
sha2 = "0.10.9"
hmac = "0.12"

# Image Processing
image = "0.25.8"

# Compression
flate2 = "1.1.5"
brotli = "8.0.2"

# Phone Number Validation
phonenumber = "0.3.7"

# Serialization formats
rmp-serde = "1.3.0"
prost = "0.14.1"
prost-build = "0.14.1"

# gRPC
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Redis (for sessions)
# Temporarily downgraded to 0.32 due to deadpool-redis compatibility
# TODO: Upgrade to redis 1.0 when deadpool-redis supports it
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Connection pooling & migrations
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
sea-query = { version = "1.0.0-rc.22", features = [
  "with-json",
  "with-chrono",
  "with-rust_decimal",
  "postgres-array",
  "sqlx-utils",
  "backend-postgres",
  "backend-mysql",
  "backend-sqlite",
] }
rust_decimal = "1.37"
sea-orm = { version = "1.1.3", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

# Testing
testcontainers = { version = "0.26.0", features = ["blocking"] }
testcontainers-modules = { version = "0.14.0", features = [
  "postgres",
  "mysql",
  "redis",
] }
proptest = "1.8.0"
tokio-test = "0.4.4"
serial_test = "3.2.0"
rstest = "0.26.1"
mockall = "0.14.0"
scopeguard = "1.2.0"
tempfile = "3.15.0"
trybuild = "1.0.114"
url = "2.5.4"

# Note: num-bigint-dig v0.8.x has a future incompatibility warning
# (private vec macro issue, see https://github.com/rust-lang/rust/issues/120192)
# This is fixed in v0.9.0+, but we currently use v0.8.6 via the following dependency chain:
# sqlx -> sqlx-mysql -> rsa v0.9.x -> num-bigint-dig v0.8.6
#
# The warning does not affect current builds and will be resolved when:
# - rsa upgrades to num-bigint-dig v0.9.0+ (tracked in rsa repository)
# - OR sqlx upgrades to a version of rsa that uses num-bigint-dig v0.9.0+
#
# This is a transitive dependency issue that will be resolved upstream.
# No action needed on our side unless the warning becomes an error in future Rust versions.
